--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: "^0.11.3+16"
   xml: ^3.5.0
+  transparent_image: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -37,7 +38,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+assets:
+- images/mercy.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
