--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   http: "^0.11.3+16"
   xml: ^3.5.0
   transparent_image: ^1.0.0
+  crypto: ^2.0.6
 
 dev_dependencies:
   flutter_test:
