--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   xml: ^3.5.0
   transparent_image: ^1.0.0
   crypto: ^2.0.6
+  webview_flutter: ^0.3.9+1
 
 dev_dependencies:
   flutter_test:
