--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   transparent_image: ^1.0.0
   crypto: ^2.0.6
   webview_flutter: ^0.3.9+1
+#  firebase_core: ^0.4.0+7
+#  firebase_database: ^3.0.4
 
 dev_dependencies:
   flutter_test:
