--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   transparent_image: ^1.0.0
   crypto: ^2.0.6
   webview_flutter: ^0.3.9+1
-  flutter_facebook_login: ^2.0.1
+#  flutter_facebook_login: ^2.0.1
   sqflite: ^1.1.6
   path: ^1.6.2
 
