[EDIT] 2019/09/22 20:00 change something

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 assets:
-- images/mercy.jpg
+ - images/genji.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
