--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,20 @@ d
 flutter_01.log
 pubspec.lock
 testing_flickr_public_api.iml
+.dart_tool/flutter_build/48b61c66200c99c0b1de6332f7e97ba7/.filecache
+*.dill
+.dart_tool/flutter_build/48b61c66200c99c0b1de6332f7e97ba7/debug_android_application.stamp
+.dart_tool/flutter_build/48b61c66200c99c0b1de6332f7e97ba7/flutter_assets.d
+.dart_tool/flutter_build/48b61c66200c99c0b1de6332f7e97ba7/kernel_snapshot.d
+.dart_tool/flutter_build/48b61c66200c99c0b1de6332f7e97ba7/kernel_snapshot.stamp
+.dart_tool/flutter_build/55f35b1003e43f0e5a07b9286f26d115/.filecache
+.dart_tool/flutter_build/55f35b1003e43f0e5a07b9286f26d115/copy_flutter_bundle.stamp
+.dart_tool/flutter_build/55f35b1003e43f0e5a07b9286f26d115/flutter_assets.d
+.dart_tool/flutter_build/55f35b1003e43f0e5a07b9286f26d115/kernel_snapshot.d
+.dart_tool/flutter_build/55f35b1003e43f0e5a07b9286f26d115/kernel_snapshot.stamp
+.dart_tool/flutter_build/fa4a33dc772347a907f4933e390a449a/.filecache
+.dart_tool/flutter_build/fa4a33dc772347a907f4933e390a449a/copy_flutter_bundle.stamp
+.dart_tool/flutter_build/fa4a33dc772347a907f4933e390a449a/flutter_assets.d
+.dart_tool/flutter_build/fa4a33dc772347a907f4933e390a449a/kernel_snapshot.d
+.dart_tool/flutter_build/fa4a33dc772347a907f4933e390a449a/kernel_snapshot.stamp
+.flutter-plugins-dependencies
